# PX4-Autopilot-MAAL

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  changes.txt  control_allocator_modifications.md  energy_optimal_tilt_allocation.diff  trim.diff  uncommitted_changes.diff
Tools/px4_gust_eval/: CHANGELOG_AUTO_PLOT.md  DOCKER_TROUBLESHOOTING_CN.md  README.md  README_CN.md  USAGE_EXAMPLES_CN.md  add_param_variants.py  add_roll_variants.py  analyze_pid_envelope.py  analyze_results.py  compare_csv_alignment.py  gust_test_runner.py  main.py  nocodb_lhs_client.py  plot_aero_model.py  plot_gust_levels.py  postprocess_ulog.py  pyproject.toml  repair_nocodb_wandb_runs.py  run_gust_eval_container.sh  sdf_lhs_schema.json  setup_environment.py  simple_runner.py  streamlit_pid_envelope.py  task_status_server.py  ulog_to_gust_csv.py
Tools/px4_gust_eval/tasks/: basic_validation_tests.json  beaufort_levels_tests.json  beaufort_levels_tests_advplane.json  beaufort_levels_tests_svtol.json  beaufort_levels_tests_tailsitter.json  beaufort_levels_tests_x500.json  beaufort_levels_tests_x500_dev.json  csv_wind_eval.json  dryden.json  dryden_boundary_layer_z_levels.json  example_gust_tests.json  l6_cos.json  launch_only_x500.json  plane.plan  quick_test.json  severe_weather_tests.json  stability_tests.json  svtol.plan  tail.plan  tailsitter.plan  verify.json
Tools/px4_gust_eval/utils/: gust_dimensions.py  gust_grouping.py  gust_metrics.py  gust_plotting.py
docker/: gust-eval.Dockerfile  run_gust_eval.sh
docs/: tiltrotor_effectiveness.md  (+1 more)
(+206 files in other folders)
