[project]
name = "px4-gust-eval"
version = "0.1.0"
description = "PX4 SITL Wind Gust Evaluation Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mavsdk>=3.10.2",
    "pymavlink>=2.4.49",
    "psutil",
    "colorama",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "SciencePlots>=2.1.0",
]
